2001-03-06  Sven Wischnowsky  <wischnow@zsh.org>

	* 13575: Src/Zle/compmatch.c: another fix for completion matching,
 	CLF_MISS in the wrong cline struct
	
2001-03-06  Andrej Borsenkow <bor@zsh.org>

	* 13544, 13568 (Peter): Completion/Core/_ignored,
	Completion/Core/_main_complete, Completion/Core/_prefix,
	Completion/Core/compinstall, Doc/Zsh/compsys.yo: allow
	matchers in matcher-list to augment as well as replace
	previous matcher list

	* unposted: Etc/CONTRIBUTORS: use zsh.org mail address (courtsy
	of Geoff) for me :-)


2001-03-05  Sven Wischnowsky  <wischnow@zsh.org>

	* 13566: Completion/Builtins/_aliases, Completion/Core/_expand_alias,
 	Doc/Zsh/compsys.yo: new _expand_aliases to, well, expand aliases
	
	* 13565: Src/Zle/compmatch.c, Src/Zle/compresult.c,
 	Test/54compmatch.ztst: fix for matching control, try harder to
 	merge separately completed parts to avoid losing user-typed
 	characters
	
2001-03-04  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* Unposted: Etc/FAQ.yo: latest version.

	* Unposted: Etc/NEWS, Etc/CONTRIBUTORS: changes aimed at 4.0.1
	release.

2001-02-28  Bart Schaefer  <schaefer@zsh.org>

	* users/3649: Completion/Commands/_bash_completions,
	Completion/Commands/_complete_debug,
	Completion/Commands/_complete_help,
	Completion/Commands/_correct_word,
	Completion/Commands/_expand_word,
	Completion/Commands/_history_complete_word,
	Completion/Commands/_next_tags: Same as 13555 below, but for all
	the other places where $_comp_options was referenced.

2001-02-28  Oliver Kiddle  <opk@zsh.org>

	* 13555: Completion/Core/_main_complete: handle ksh_arrays on the
	setopt line to fix problem from users/3648

2001-02-28  Sven Wischnowsky  <wischnow@zsh.org>

	* 13554: Completion/Core/compinit, Doc/Zsh/options.yo, Src/lex.c,
 	Src/options.c, Src/zsh.h, Src/Zle/compcore.c, Src/Zle/compctl.c,
 	Src/Zle/zle_tricky.c: add `aliases' option to be able to disable
 	alias expansion
	
2001-02-26  Sven Wischnowsky  <wischnow@zsh.org>
